[package]
name = "rmonkey"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
rmonkey_token = {path = "./crates/rmonkey_token/"}
rmonkey_lexer = {path = "./crates/rmonkey_lexer/"}
rmonkey_parser = {path = "./crates/rmonkey_parser/"}
rmonkey_object = {path = "./crates/rmonkey_object/"}
rmonkey_evaluator = {path = "./crates/rmonkey_evaluator/"}
