[package]
name = "rmonkey"
version = "0.1.0"
edition = "2021"

[workspace]
members=[
    "crates/rmonkey_ast",
    "crates/rmonkey_error",
    "crates/rmonkey_evaluator",
    "crates/rmonkey_fmt",
    "crates/rmonkey_lexer",
    "crates/rmonkey_object",
    "crates/rmonkey_parser",
    "crates/rmonkey_token",
    "crates/rmonkey_wasm",
]

[dependencies]
rmonkey_token = {path = "./crates/rmonkey_token/"}
rmonkey_lexer = {path = "./crates/rmonkey_lexer/"}
rmonkey_parser = {path = "./crates/rmonkey_parser/"}
rmonkey_object = {path = "./crates/rmonkey_object/"}
rmonkey_evaluator = {path = "./crates/rmonkey_evaluator/"}
