[package]
name = "rmonkey_error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmonkey_token = {path = "../rmonkey_token"}
rmonkey_object = {path = "../rmonkey_object"}
rmonkey_ast = {path = "../rmonkey_ast"}
