[package]
name = "rmonkey_evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmonkey_object = {path = "../rmonkey_object/"}
rmonkey_ast = {path = "../rmonkey_ast/"}
rmonkey_error = {path = "../rmonkey_error/"}

[dev-dependencies]
rmonkey_lexer = {path = "../rmonkey_lexer/"}
rmonkey_parser = {path = "../rmonkey_parser/"}
