[package]
name = "rmonkey_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmonkey_token = {path = "../rmonkey_token"}
rmonkey_ast = {path = "../rmonkey_ast"}
rmonkey_lexer = {path = "../rmonkey_lexer"}
rmonkey_error = {path = "../rmonkey_error"}
